--- a/변우현/assets/css/style.css
+++ b/변우현/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
+    z-index: 1000;
 }
 @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
 
@@ -65,12 +66,6 @@ body {
     width: 100px;
     margin-bottom: 20px;
 }
-
-#section2 {
-    height: 3000px;
-}
-
-
 @font-face {
     font-family: "neontubes";
     src: url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.eot");
@@ -113,6 +108,7 @@ body {
 #section2 {
     background-color: #170619;
     padding: 4vw;
+    position: relative;
 }
 #section2 h2 {
     font-size: 10vw;
@@ -170,7 +166,110 @@ body {
     color: #b2b2b2;
 }
 
+.smallBox1 {
+    position: absolute;
+    left: 10%;
+    top: 60%;
+    width: 200px;
+    height: 200px;
+    padding: 10px;
+    background-color: #ea3cfd4e;
+    backdrop-filter: blur(10px);
+    border: 1px solid #EA3CFD;
+    border-radius: 10px;
+    text-align: center;
+}
+.smallBox1 .img {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://fitalux-portfolio-vite-2023.netlify.app/assets/maru02-72d1d391.jpg);
+}
+.smallBox1 span {
+    background-color: #EA3CFD;
+    color: #000;
+    text-transform: uppercase;
+    padding: 0px 8px;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.smallBox1 em {
+    color: #EA3CFD;
+    display: block;
+    font-weight: bold;
+    font-size: 14px;
+}
 
+.smallBox2 {
+    position: absolute;
+    left: 24%;
+    top: 60%;
+    width: 200px;
+    height: 200px;
+    padding: 10px;
+    background-color: #ea3cfd4e;
+    backdrop-filter: blur(10px);
+    border: 1px solid #EA3CFD;
+    border-radius: 10px;
+    text-align: center;
+}
+.smallBox2 .img {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://fitalux-portfolio-vite-2023.netlify.app/assets/maru03-3597a509.jpg);
+    background-size: cover;
+}
+.smallBox2 span {
+    background-color: #EA3CFD;
+    color: #000;
+    text-transform: uppercase;
+    padding: 0px 8px;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.smallBox2 em {
+    color: #EA3CFD;
+    display: block;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.smallBox3 {
+    position: absolute;
+    left: 38%;
+    top: 60%;
+    width: 200px;
+    height: 200px;
+    padding: 10px;
+    background-color: #ea3cfd4e;
+    backdrop-filter: blur(10px);
+    border: 1px solid #EA3CFD;
+    border-radius: 10px;
+    text-align: center;
+}
+.smallBox3 .img {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://fitalux-portfolio-vite-2023.netlify.app/assets/maru01-e180eaa3.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.smallBox3 span {
+    background-color: #EA3CFD;
+    color: #000;
+    text-transform: uppercase;
+    padding: 0px 8px;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.smallBox3 em {
+    color: #EA3CFD;
+    display: block;
+    font-weight: bold;
+    font-size: 14px;
+}
 
 
 /* line */
@@ -190,4 +289,102 @@ body {
     position: absolute;
     left: 0;
     top: 0;
+}
+.line.end::after {
+    content: '';
+    height: 20px;
+    width: 2px;
+    background-color: #EA3CFD;
+    position: absolute;
+    right: 0;
+    top: -20px;
+}
+.line.end::before {
+    width: 0;
+}
+
+
+
+/* section3 */
+#section3 {
+    background-color: #170619;
+    padding: 4vw;
+    position: relative;
+}
+#section3 h2 {
+    font-size: 10vw;
+    line-height: 0.9;
+    color: #65E3A2;
+    text-transform: uppercase;
+    font-family: 'Orbitron';
+    padding-top: 10vw;
+    font-weight: 100;
+}
+#section3 p {
+    color: #fff;
+    font-family: 'IropkeBatang';
+}
+#section3 .line {
+    width: 100%;
+    height: 2px;
+    background-color: #65E3A2;
+    display: block;
+    margin-top: 50px;
+    position: relative;
+}
+#section3 .line::before {
+    content: '';
+    height: 20px;
+    width: 2px;
+    background-color: #65E3A2;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.script-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.script {
+    width: 24%;
+    height: 600px;
+    margin-top: 40px;
+}
+.IndexItem {
+    position: relative;
+    display: block;
+    background-color: rgb(75 225 164);
+    height: 650px;
+}
+.IndexItem_background {
+    position: absolute;
+    inset: 2px;
+    z-index: 10;
+    background-color: rgb(6 17 13);
+}
+.Index-info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+}
+.Index-info .img {
+    width: 90%;
+    height: 80%;
+    margin-left: 5%;
+    margin-top: 5%;
+    background-image: url(https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80);
+    background-position: center center;
+    border-radius: 10px;
+}
+.Index-info h3 {
+    color: rgb(75 225 164);
+    padding: 20px;
+    background-color: #142D21;
+    margin: 20px;
+    border-radius: 0 0 30px 0;
 }
