--- a/이유나/assets/css/style.css
+++ b/이유나/assets/css/style.css
@@ -1,265 +1,295 @@
-#main {}
+#main {
+}
 
 #main > section {
-    width: 100%;
+  width: 100%;
 }
 
 #header {
-    position: fixed;
-    width: 100%;
-    height: 66px;
-    background-color: #f5fff85e;
-    backdrop-filter: blur(10px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-transform: uppercase;
-    padding: 10px 15px;
-    z-index: 10000;
+  position: fixed;
+  width: 100%;
+  height: 66px;
+  background-color: #f5fff85e;
+  backdrop-filter: blur(10px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-transform: uppercase;
+  padding: 10px 15px;
+  z-index: 10000;
 }
 #header h1 {
-    font-size: 20px;
+  font-size: 20px;
 }
 #header h1 a {
-    padding: 10px;
+  padding: 10px;
 }
 #header .contact a {
-    padding: 10px;
+  padding: 10px;
 }
 #section1 {
-    width: 100%;
-    height: 240vh;
-    background-image: url(../img/section01.jpg);
-    background-size: cover;
-    background-position: center ;
-    background-repeat: no-repeat;
-    padding-bottom: 30vh;
+  width: 100%;
+  height: 240vh;
+  background-image: url(../img/section01.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-bottom: 30vh;
 }
 #section1 h2 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 34vw;
-    line-height: 1;
-    color: #fff;
-    font-weight: 300;
-    padding-top: 4vw;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 34vw;
+  line-height: 1;
+  color: #fff;
+  font-weight: 300;
+  padding-top: 4vw;
 }
 #section1 .desc1 {
-    font-size: 30;
-    width: 500px;
-    padding-left: 10vw;
-    color: #fff;
-    padding-bottom: 20vw;
+  font-size: 30;
+  width: 500px;
+  padding-left: 10vw;
+  color: #fff;
+  padding-bottom: 20vw;
 }
 #section1 .desc2 {
-    font-size: 5vw;
-    color: #fff;
-    line-height: 1;
-    width: 70%;
-    margin: 30% auto ;
-    font-weight: 300;
+  font-size: 5vw;
+  color: #fff;
+  line-height: 1;
+  width: 70%;
+  margin: 30% auto;
+  font-weight: 300;
 }
 #section1 .desc3 {
-    width: 30vw;
-    height: 30vw;
-    margin: 20vw auto 10vw auto;
-    box-shadow: 7px 7px 0 0px rgba(0,0,0,0.3);
+  width: 30vw;
+  height: 30vw;
+  margin: 20vw auto 10vw auto;
+  box-shadow: 7px 7px 0 0px rgba(0, 0, 0, 0.3);
 }
 #section1 .desc3 .name {
-    color: #fff;
-    font-size: 4vw;
-    text-align: right;
-    margin-top: -2.8vw;
-    margin-right: -2vw;
-    font-weight: 300;
+  color: #fff;
+  font-size: 4vw;
+  text-align: right;
+  margin-top: -2.8vw;
+  margin-right: -2vw;
+  font-weight: 300;
 }
 
 /* media */
-@media (max-width: 800px){
-    #header {
-        height: 50px;
-    }
-    #header h1 a {
-        padding: 3px;
-        font-size: 16px;
-    }
-    #header .contact a {
-        padding: 3px;
-        font-size: 16px;
-    }
-    #section1 h2 {
-        padding-top: 90px;
-    }
-    #section1 .desc1 {
-        font-size: 20px;
-        padding: 0 10%;
-        text-align: center;
-        width: 100%;
-    }
-    #section1 .desc2 {
-        font-size: 24px;
-        text-align: center;
-        margin-top: 20%;
-    }
-    #section1 .desc3 {
-        width: 80vw;
-        box-shadow: none
-    }
+@media (max-width: 800px) {
+  #header {
+    height: 50px;
+  }
+  #header h1 a {
+    padding: 3px;
+    font-size: 16px;
+  }
+  #header .contact a {
+    padding: 3px;
+    font-size: 16px;
+  }
+  #section1 h2 {
+    padding-top: 90px;
+  }
+  #section1 .desc1 {
+    font-size: 20px;
+    padding: 0 10%;
+    text-align: center;
+    width: 100%;
+  }
+  #section1 .desc2 {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 20%;
+  }
+  #section1 .desc3 {
+    width: 80vw;
+    box-shadow: none;
+  }
 }
-
 
 /* section2 */
 #section2 {
-    height: 4000px;
-    padding: 20vw 0;
+  height: 4000px;
+  padding: 20vw 0;
 }
 #section2 h2 {
-    font-size: 15vw;
-    font-weight: 100;
-    text-align: right;
-    margin-bottom: 5vw;
-    margin-right: -20vw;
+  font-size: 15vw;
+  font-weight: 100;
+  text-align: right;
+  margin-bottom: 5vw;
+  margin-right: -20vw;
 }
 #section2 .subTitle {
-    width: 60vw;
-    text-align: left;
-    font-size: 5vw;
-    line-height: 1;
-    font-weight: 200;
-    margin-left: auto;
-    margin-bottom: 5vw;
+  width: 60vw;
+  text-align: left;
+  font-size: 5vw;
+  line-height: 1;
+  font-weight: 200;
+  margin-left: auto;
+  margin-bottom: 5vw;
 }
 .aboutBox1 .imgWrap {
-    margin-left: 5vw;
-    width: 40vw;
-    height: 50vw;
-    position: relative;
+  margin-left: 5vw;
+  width: 40vw;
+  height: 50vw;
+  position: relative;
 }
 .aboutBox1 .imgWrap .img {
-    position: absolute;
-    left: 0; 
-    top: 0;
-    background-image: url(../img/sectioin02-1.jpg);
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-image: url(../img/sectioin02-1.jpg);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
 }
 .aboutBox1 .text {
-    width: 70vw;
-    padding-left: 20vw;
-    margin-top: -4vw;
-    line-height: 1.6;
-    font-size: 20px;
-    font-family: 'ChosunNm';
-    color: #4B3D30;
+  width: 70vw;
+  padding-left: 20vw;
+  margin-top: -4vw;
+  line-height: 1.6;
+  font-size: 20px;
+  font-family: "ChosunNm";
+  color: #4b3d30;
 }
 .aboutBox2 {
-    padding: 20vw 0;
-    display: flex;
-    align-items: end;
+  padding: 20vw 0;
+  display: flex;
+  align-items: end;
 }
 .aboutBox2 .title {
-    width: 50%;
-    text-align: right;
-    font-size: 9vw;
-    color: #BE968B;
-    font-weight: 300;
-    margin-right: -2vw;
-    position: relative;
-    z-index: 100;
-    padding-bottom: 20vw;
-    mix-blend-mode: difference;
+  width: 50%;
+  text-align: right;
+  font-size: 9vw;
+  color: #be968b;
+  font-weight: 300;
+  margin-right: -2vw;
+  position: relative;
+  z-index: 100;
+  padding-bottom: 20vw;
+  mix-blend-mode: difference;
 }
 .aboutBox2 .text {
-    width: 50%;
+  width: 50%;
 }
 .aboutBox2 .text .img {
-    background-image: url(../img/sec3.jpg);
-    background-position: center;
-    background-size: cover;
-    width: 30vw;
-    height: 40vw;
+  background-image: url(../img/sec3.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 30vw;
+  height: 40vw;
 }
 .aboutBox2 .text .desc {
-    font-size: 20px;
-    font-family: 'ChosunNm';
-    color: #4B3D30;
-    padding: 3vw;
-    padding-top: 0;
+  font-size: 20px;
+  font-family: "ChosunNm";
+  color: #4b3d30;
+  padding: 3vw;
+  padding-top: 0;
 }
 
-
 #section3 {
-    height: 100vh;
-    background-color: #4D3D30;
-    color: #fff;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 100vh;
+  background-color: #4d3d30;
+  color: #fff;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #section3 .box {
-    position: absolute;
-    top: 50%;
-    transform: translatey(-50%);
-    width: 10%;
-    height: 10vh;
-    background-color: #fff;
-    background-image: url(https://images.unsplash.com/photo-1603900450760-e6f37fc02870?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: none;
+  position: absolute;
+  top: 50%;
+  transform: translatey(-50%);
+  width: 10%;
+  height: 10vh;
+  background-color: #fff;
+  background-image: url(https://images.unsplash.com/photo-1603900450760-e6f37fc02870?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: none;
 }
 #section3 .text {
-    font-size: 8vw;
-    white-space: nowrap;
-    text-transform: uppercase;
+  font-size: 8vw;
+  white-space: nowrap;
+  text-transform: uppercase;
 }
 
 #section4 {
-    height: 2000px;
-    background-color: #ccc;
+  height: 2000px;
+  background-color: #ccc;
 }
 
 #section5 {
-    background-color: #878787;
+  background-color: #878787;
 }
 
 .sec5-box1 {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(255, 201, 201);
-    position: relative;
-    z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(255, 201, 201);
+  position: relative;
+  z-index: 100;
 }
 .sec5-box2 {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(212, 149, 149);
-    position: relative;
-    z-index: 200;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(212, 149, 149);
+  position: relative;
+  z-index: 200;
 }
 .sec5-box3 {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(133, 103, 103);
-    position: relative;
-    z-index: 300;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(133, 103, 103);
+  position: relative;
+  z-index: 300;
 }
 .sec5-box4 {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(87, 64, 64);
-    position: relative;
-    z-index: 400;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(87, 64, 64);
+  position: relative;
+  z-index: 400;
+}
+
+#section6 {
+  height: 2000px;
+  background-color: #ff0000;
+}
+
+@media (max-width: 800px) {
+  #section1 {
+    height: auto;
+  }
+  #section2 h2 {
+    margin-right: 0;
+  }
+  .aboutBox1 .imgWrap {
+    width: 90vw;
+    height: 100vw;
+  }
+  .aboutBox1 .imgWrap .img {
+    top: 100px;
+  }
+  .aboutBox1 .text {
+    width: 90vw;
+    padding-left: 5vw;
+    margin-top: 20vw;
+    font-size: 16px;
+    text-align: left;
+  }
+  .aboutBox1 .text br {
+    display: none;
+  }
 }
 
 
 
-#section6 {
-    height: 2000px;
-    background-color: #ff0000;
+#section5 {
+  background-color: #000;
+  height: 4000px;
 }
