--- a/전윤기/assets/css/style2.css
+++ b/전윤기/assets/css/style2.css
@@ -1,3 +1,21 @@
+.loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 10000;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loading span {
+    color: #0AFB21;
+    font-size: 18vw;
+    font-family: Gloock;
+}
+
 #header {
     position: fixed;
     left: 40px;
@@ -28,6 +46,9 @@
     text-transform: capitalize;
     font-family: 'NexonLv1Gothic';
     font-weight: 300;
+}
+#section1 .title div {
+    overflow: hidden;
 }
 #section1 .title em {
     font-family: Gloock;
