--- a/문진호/assets/css/style.css
+++ b/문진호/assets/css/style.css
@@ -121,6 +121,55 @@
 
 #item__wrap>div.title h3 em {
     font-size: 14px;
-    color: #ccc;
+    color: #969696;
     padding-left: 10px;
+}
+
+#item__wrap .list {
+    margin-top: 10px;
+}
+
+#item__wrap .list ul li {
+    display: inline;
+
+}
+
+#item__wrap .list ul li a {
+    display: inline-block;
+    border: 1px solid #000;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 28px;
+    font-family: 'GmarketSans';
+    font-weight: 400;
+    border-radius: 50%;
+    font-size: 14px;
+    background-color: #000;
+    color: #fff;
+}
+
+#item__wrap .list ul li a:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.item {
+    position: relative;
+}
+
+.item::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 100;
+    width: 100%;
+    height: 0%;
+    background-color: #000;
+    transition: height 0.3s ease-in;
+}
+
+.item.active::before {
+    height: 100%;
 }
