--- a/이지영/assets/css/style.css
+++ b/이지영/assets/css/style.css
@@ -1,3 +1,9 @@
+.container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 #header {
     position: fixed;
     left: 0;
@@ -32,6 +38,7 @@
     font-size: 11vw;
     line-height: 1.1;
     margin-top: 50px;
+    font-family: 'PPRader';
 }
 
 .title__wrap .t1 {
@@ -75,13 +82,203 @@
 }
 
 #section2 {
-    padding: 5%;
-    height: 1000px;
+    padding: 100px 5%;
     background-color: #fff;
 
 }
 
-#section2 .left {
+#section2 .intro {
+    padding-bottom: 100px;
+}
+
+#section2 .intro .top {
     font-size: 4vw;
     line-height: 1.3;
+    font-family: 'PPRader';
+    padding-bottom: 100px;
+}
+
+#section2 .intro .do {
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    display: grid;
+    grid-template-columns: 34% 33% 33%;
+    grid-template-rows: 200px 200px 200px;
+    grid-template-areas:
+        "box1 box2 box3"
+        "box1 box4 box5"
+        "box1 box6 box7";
+}
+
+#section2 .intro .do h3 {
+    padding: 20px;
+    font-family: 'PPRader';
+    font-size: 30px;
+}
+
+#section2 .intro .do p {
+    padding: 0 20px 20px 20px;
+    font-family: 'IropkeBatang';
+}
+
+
+#section2 .intro .do>div:nth-child(1) {
+    grid-area: box1;
+    border-right: 1px solid #000;
+    background-image: url(../img/min.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+#section2 .intro .do>div:nth-child(2) {
+    grid-area: box2;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+#section2 .intro .do>div:nth-child(3) {
+    grid-area: box3;
+    border-bottom: 1px solid #000;
+}
+
+#section2 .intro .do>div:nth-child(4) {
+    grid-area: box4;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+#section2 .intro .do>div:nth-child(5) {
+    grid-area: box5;
+    border-bottom: 1px solid #000;
+}
+
+#section2 .intro .do>div:nth-child(6) {
+    grid-area: box6;
+    border-right: 1px solid #000;
+}
+
+#section2 .intro .do>div:nth-child(7) {
+    grid-area: box7
+}
+
+#section2 .intro .do>div:nth-child(8) {
+    grid-area: box8
+}
+
+#section2 .intro .do>div:nth-child(9) {
+    grid-area: box9
+}
+
+
+
+#section3 {
+    padding-bottom: 300px;
+    background-color: #F3F1ED;
+}
+
+#section3 h3 {
+    font-size: 10vw;
+    font-family: 'PPRader';
+    line-height: 1;
+    padding: 100px 5% 0px 5%;
+}
+
+#section3 .desc {
+    font-size: 30px;
+    padding: 0 5%;
+    margin-bottom: 100px;
+}
+
+.work__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.work__list .work {
+    width: 33.3333%;
+}
+
+.work__list .work:nth-child(1) .img {
+    background-image: url(https://images.unsplash.com/photo-1701906268034-21d37f41bd4e?q=80&w=3170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work:nth-child(2) .img {
+    background-image: url(https://images.unsplash.com/photo-1701743806988-1296537d33ca?q=80&w=2832&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work:nth-child(3) .img {
+    background-image: url(https://images.unsplash.com/photo-1702015835071-ca83f1cedce7?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work:nth-child(4) .img {
+    background-image: url(https://images.unsplash.com/photo-1701906268034-21d37f41bd4e?q=80&w=3170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work:nth-child(5) .img {
+    background-image: url(https://images.unsplash.com/photo-1702015841891-aed6f93f5b73?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work:nth-child(6) .img {
+    background-image: url(https://images.unsplash.com/photo-1701979071322-430a57bd9c3e?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.work__list .work .img {
+    padding-bottom: 56.25%;
+    height: 40%;
+    background-size: cover;
+    background-position: center center;
+}
+
+.work__list .work .info {
+    padding: 20px;
+}
+
+.work__list .work .info:hover {
+    background-color: #000;
+}
+
+.work__list .work .info:hover h4 {
+    color: #fff;
+}
+
+.work__list .work .info:hover p {
+    color: #fff;
+}
+
+.work__list .work .info:hover span {
+    color: #fff;
+}
+
+.work__list .work .info span {
+    font-family: 'IropkeBatang';
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.work__list .work .info h4 {
+    font-size: 24px;
+    line-height: 1.3;
+    margin-bottom: 10px;
+    font-family: 'IropkeBatang';
+}
+
+.work__list .work .info p {
+    font-size: 16px;
+    font-family: 'IropkeBatang';
+}
+
+.work__list .work .btn {
+    text-align: center;
+}
+
+.work__list .work .btn a {
+    border: 1px solid #000;
+    font-family: 'IropkeBatang';
+    padding: 5px 20px;
+    display: inline-block;
+    border-radius: 50px;
+    margin-top: 10px;
 }
