--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -93,7 +93,8 @@
 .layer__about .list .work ul li a {
     width: 50px;
     height: 50px;
-    display: inline-block;
+    display: block;
+    margin: 0 auto;
     background-color: #ffffff57;
     border-radius: 50%;
     margin-bottom: 5px;
