--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -26,6 +26,10 @@
     padding: 10px;
 }
 
+.footer__info .menu ul {
+    display: flex;
+}
+
 .footer__info .menu li {
     width: 40px;
     height: 40px;
@@ -47,8 +51,7 @@
     width: 25px;
 }
 
-
-.layer__about {
+.layer {
     width: 80vw;
     height: 80vh;
     position: absolute;
@@ -56,83 +59,72 @@
     transform: translatex(-50%);
     bottom: 80px;
     border-radius: 1px;
+    opacity: 0;
+    color: #fff;
+    font-family: "nanumSquareNeo";
 }
 
-.layer__about .list {
+.layer__contents {
     background-color: #223167a8;
     backdrop-filter: blur(30px);
-    height: calc(100% - 70px);
-    padding: 40px;
-    color: #fff;
-    text-transform: capitalize;
-    overflow: hidden;
+    height: calc(100% - 60px);
     border-radius: 10px 10px 0 0;
+    padding: 5%;
 }
 
-.layer__about .list .work {
-    margin-bottom: 100px;
-}
-
-.layer__about .list .work h3 {
-    margin-bottom: 30px;
-    font-family: "nanumSquareNeo";
-    font-weight: 800;
-}
-
-.layer__about .list .work ul {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.layer__about .list .work ul li {
-    width: 100px;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.layer__about .list .work ul li a {
-    width: 50px;
-    height: 50px;
-    display: block;
-    margin: 0 auto;
-    background-color: #ffffff57;
-    border-radius: 50%;
-    margin-bottom: 5px;
-}
-
-.layer__about .intro {
+.layer__footer {
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height: 60px;
     background-color: #22316767;
     backdrop-filter: blur(10px);
     color: #fff;
-    padding: 20px 40px;
+    padding: 19px;
     font-family: "nanumSquareNeo";
-    display: flex;
     border-radius: 0 0 10px 10px;
 }
 
-.layer__about .intro .face {
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    background: #000;
-    margin-right: 10px;
-    background-image: url(https://images.unsplash.com/photo-1681502014934-b70a5ff05bef?q=80&w=3388&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-    background-size: cover;
-    border-radius: 50%;
+
+/* layout - about */
+.about h3 {
+    margin-bottom: 5px;
+    font-size: 25px;
 }
 
-.layer__about .intro h3 {
-    padding-top: 3px;
+.about .small {
+    font-size: 16px;
 }
 
-.layer__about .intro .close {
+.about .mail {
+    display: block;
+    font-size: 12px;
+    margin-top: 30px;
+    position: relative;
+    color: #c9c9c9
+}
+
+.about .mail::before {
+    content: '';
+    width: 50px;
+    height: 1px;
+    background-color: #fff;
     position: absolute;
-    right: 40px;
-    top: 25px;
-    cursor: pointer;
+    left: 0;
+    top: -16px;
+}
+
+.about .intro1 {
+    margin-top: 30px;
+    font-size: 18px;
+    line-height: 1.5;
+    word-break: keep-all;
+}
+
+.about .intro2 {
+    margin-top: 20px;
+    font-size: 13px;
+    line-height: 1.5;
+    opacity: 0.8;
 }
