--- a/정해연/assets/css/reset.css
+++ b/정해연/assets/css/reset.css
@@ -5,7 +5,7 @@
     src: url("../fonts/PartizenoRegular.woff2") format("woff2"),
         url("../fonts/PartizenoRegular.woff") format("woff");
     font-weight: normal;
-    font-style: italic;
+    font-style: normal;
     font-display: swap;
 }
 
