--- a/임종한/assets/css/style.css
+++ b/임종한/assets/css/style.css
@@ -55,7 +55,6 @@
     margin-left: 40px;
 }
 
-
 #section1 {
     height: 100vh;
     display: flex;
@@ -100,8 +99,88 @@
 
 #section2 {
     height: 2000px;
-    background-color: #000;
+    padding: 0 0 100px;
+    position: relative;
+    overflow: hidden;
 }
+
+#section2 .imgWrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    width: 200%;
+    margin-left: -50%;
+    white-space: nowrap;
+}
+
+#section2 .imgWrap>div {
+    width: 800px;
+    height: 500px;
+    margin: 10px;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 10px;
+}
+
+#section2 .imgWrap>div:nth-child(1) {
+    background-image: url(https://images.unsplash.com/photo-1635438909544-3f1e87c206eb?q=80&w=4074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+#section2 .imgWrap>div:nth-child(2) {
+    background-image: url(https://images.unsplash.com/photo-1702221422565-60f734cd90b1?q=80&w=4000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+#section2 .imgWrap>div:nth-child(3) {
+    background-image: url(https://images.unsplash.com/photo-1683009427619-a1a11b799e05?q=80&w=4170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.text-title {
+    position: relative;
+}
+
+.text-title p {
+    padding: 3% 5% 0 10%;
+    font-family: 'GmarketSans';
+    font-weight: 900;
+    font-size: 4vw;
+    line-height: 1.2;
+    text-align: right;
+}
+
+.text-title .svg {
+    position: absolute;
+    left: 5%;
+    top: 14%;
+}
+
+.text-title .svg svg {
+    width: 4.5vw;
+    height: 4.5vw;
+}
+
+.text-title .desc2 {
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    font-size: 16px;
+    color: #202020;
+    font-weight: normal;
+}
+
+.text-title .desc2 i {
+    font-style: normal;
+    text-decoration: underline;
+    text-underline-position: under;
+    display: block;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+
 
 @media (max-width: 1000px) {
     #header .left p {
