--- a/이명훈/assets/css/style.css
+++ b/이명훈/assets/css/style.css
@@ -1,121 +1,146 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+@import url('https://webfontworld.github.io/yangheeryu/GowunBatang.css');
+@import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Nixie+One&display=swap');
+
+
+
+
+
+body {
+    background-color: #DFDCD8;
+}
 
 #header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
     z-index: 1000;
+    width: 100%;
+    height: 70px;
+    background-color: #dfff0dd8;
+    backdrop-filter: blur(10px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'GmarketSans';
+    padding: 0 20px;
 }
 
-#header h1 {
-    color: #fff;
-    font-family: 'PPRader';
-    line-height: 1;
-    padding: 20px;
-    font-size: 20px;
-    font-weight: 900;
+#header nav li {
+    display: inline-block;
 }
 
-#header .nav {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    color: #fff;
-    font-family: 'PPRader';
-    text-align: left;
-    font-size: 20px;
-    font-weight: 100;
+#header nav li a {
+    padding: 10px;
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
-#header .nav li {
-    padding-left: 25px;
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 70px;
+    background-color: #dfff0dd8;
+    backdrop-filter: blur(10px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'GmarketSans';
+    padding: 0 20px;
 }
 
-#header .nav li.active {
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg' class='NavLink__Arrow-sc-spxnpa-2 eCrgcr'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 0.757324L12.2426 4.99996L11.5355 5.70707L11.5353 5.70688L7.99962 9.24259L7.29252 8.53549L10.3281 5.49994H0V4.49994H10.3284L7.29289 1.46443L8 0.757324Z' fill='%236DF6FF'%3E%3C/path%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-size: 15px;
-    background-position: left 10px;
+#footer ul li {
+    display: inline-block;
 }
 
-#header .nav li.active a {
-    color: #6DF6FF;
+#footer ul li a {
+    padding: 10px;
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
 #section1 {
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
 }
 
-#canvas {
-    position: fixed;
+#section1 #canvas {
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vh;
-}
-
-#section1 .main-text {
-    padding: 4vw;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-55%);
-    z-index: 1000;
-}
-
-#section1 .main-text>div {
-    font-family: 'Orbitron';
-    font-size: 9vw;
-    line-height: 1;
-    color: #fff;
-    font-weight: 100;
-}
-
-#section1 .main-text>div em {
-    font-weight: 700;
+    height: 100%;
+    z-index: -1;
 }
 
 
-#section1 .hope {
-    position: absolute;
-    bottom: 5vw;
-    right: 5vw;
-    z-index: 10000;
-    font-size: 30px;
-    font-weight: 100;
-    color: #fff;
-    font-family: 'PPRader';
-}
-
-#section1 .hope>div {
-    padding-right: 110px;
-}
-
-#section1 .hope span {
-    position: absolute;
-    right: 0;
-    top: -20px;
-    width: 100px;
-    display: block;
-}
-
-#section1 .hope span img {
+#section1 .center {
     width: 100%;
 }
 
-
-#section2 {
-    position: relative;
-    height: 2000px;
-    background-color: #000000ae;
+#section1 .center .line {
+    border-top: 1px solid #000;
 }
 
-#section3 {}
+#section1 .center .line>div:first-child {
+    font-size: 20px;
+    background-color: #000;
+    color: #DFDCD8;
+    font-family: 'GmarketSans';
+    font-weight: 200;
+    padding: 5px 0;
+    white-space: nowrap;
+}
 
-#section4 {}
+#section1 .center .line>div:last-child {
+    font-size: 20px;
+    color: #000;
+    font-family: 'GmarketSans';
+    font-weight: 200;
+    padding: 5px 0;
+    border-bottom: 1px solid #000;
+    white-space: nowrap;
+    margin-left: -10vw;
+}
 
-#section5 {}
+#section1 .center .text {
+    width: 100%;
+    padding: 20px;
+    font-family: 'League Gothic';
+    font-size: 34vw;
+    line-height: 0.8;
+    text-transform: uppercase;
+}
+
+
+
+#section1 .center .text svg {
+    width: 100%;
+}
+
+#section1 .center .desc {
+    font-family: 'GowunBatang';
+    padding: 20px;
+    font-size: 20px;
+    margin-left: 10vw;
+}
+
+#section1 .center .desc h3 {
+    font-family: 'League Gothic';
+    color: #ff663e;
+    text-transform: uppercase;
+}
+
+
+
+#section2 {
+    height: 4000px;
+    background-color: #ccc;
+
+}
