--- a/임종한/assets/css/style.css
+++ b/임종한/assets/css/style.css
@@ -76,7 +76,7 @@
 .sec1__text .img {
     width: 12vw;
     height: 7.4vw;
-    background-image: url(https:////source.unsplash.com/500x500/?water);
+    background-image: url(https://source.unsplash.com/500x500/?water);
     background-size: cover;
     background-position: center;
     display: block;
@@ -98,7 +98,6 @@
 
 
 #section2 {
-    height: 2000px;
     padding: 0 0 100px;
     position: relative;
     overflow: hidden;
@@ -215,4 +214,99 @@
     .sec1__intro p {
         display: none;
     }
+}
+
+
+#section3 {
+    padding: 20% 50px 10%;
+    height: 4000px;
+}
+
+#section3 .title {
+    font-family: 'GmarketSans';
+    text-align: left;
+    font-size: 8vw;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 900;
+    position: relative;
+    margin-bottom: 10%;
+}
+
+#section3 .title .t1 {
+    padding-left: 14vw;
+}
+
+#section3 .title .img {
+    width: 12vw;
+    height: 6.6vw;
+    background-image: url(https://source.unsplash.com/500x500/?color);
+    background-size: cover;
+    background-position: center;
+    display: block;
+    position: absolute;
+    left: 0.6vw;
+    top: 0.6vw;
+    border-radius: 10px;
+    background-color: #000;
+}
+
+#section3 .title .desc {
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    font-size: 16px;
+    color: #202020;
+    font-weight: normal;
+    padding-left: 0.5vw;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+#section3 .title .desc2 {
+    padding-top: 30px;
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    font-size: 16px;
+    color: #202020;
+    font-weight: normal;
+    padding-left: 0.5vw;
+}
+
+.site__wrap {}
+
+.site__wrap .site {
+    display: flex;
+}
+
+.site__wrap .site .num {
+    font-size: 15vw;
+    font-family: 'GmarketSans';
+    font-weight: 900;
+    line-height: .861;
+}
+
+.site__wrap .site .subTitle {
+    width: 30%;
+    font-family: 'IropkeBatang';
+    text-align: center;
+}
+
+.site__wrap .site .tit {
+    width: 50%;
+}
+
+.site__wrap .site .tit .h4 {
+    font-size: 4vw;
+    margin-top: -0.8vw;
+    line-height: 1.3;
+    font-family: 'GmarketSans';
+    font-weight: 100;
+    text-transform: capitalize;
+}
+
+.site__wrap .site .tit .img {
+    margin-top: 5%;
+    width: 50%;
+    height: 300px;
+    background-color: #ccc;
 }
