--- a/김희진2/assets/css/style.css
+++ b/김희진2/assets/css/style.css
@@ -1,12 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+@font-face {
+    font-family: 'iceJaram-Rg';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/iceJaram-Rg.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background: #F2EEE4;
     color: #F14620;
 }
 
+#header {
+    position: fixed;
+    left: 20px;
+    right: 20px;
+    top: 0;
+    width: calc(100% - 40px);
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #F14620;
+    font-family: 'PPSupplyMono';
+    z-index: 1000;
+}
+
+#header .left {
+    display: flex;
+    align-items: center;
+}
+
+#header .left h1 {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+#header .left ul {
+    display: flex;
+}
+
+#header .left ul li a {
+    display: inline-block;
+    padding: 10px 20px;
+}
+
+#header .right {
+    padding-right: 20px;
+    text-align: right;
+}
+
 #section1 {
-    padding: 5%;
+    padding: 7% 5%;
 }
 
 #section1 .desc {
@@ -52,5 +100,30 @@ body {
 
 
 #section2 {
-    height: 3000px;
+    padding: 10% 0;
+}
+
+#section2 .about1 {
+    margin-left: 50vw;
+    font-family: 'iceJaram-Rg';
+
+}
+
+#section2 h4 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#section2 p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#section2 .about2 {
+    margin-top: 10vw;
+    margin-left: 10vw;
+    font-family: 'iceJaram-Rg';
+    font-size: 20px;
+    font-weight: bold;
 }
