--- a/권초록/assets/css/style.css
+++ b/권초록/assets/css/style.css
@@ -59,3 +59,57 @@
     vertical-align: 6px;
     padding-right: 10px;
 }
+
+
+.overlay {
+    background: #000;
+    width: 150vmax;
+    height: 150vmax;
+    pointer-events: none;
+    will-change: transform;
+    z-index: 3;
+    position: fixed;
+    top: calc(50% - 75vmax);
+    left: calc(50% - 75vmax);
+    background: 0 0;
+    transform: rotate(45deg);
+}
+
+.overlay__inner {
+    background: #000;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+
+.preview {
+    height: 100vh;
+    width: 100%;
+    pointer-events: none;
+    z-index: 4;
+    color: #fff;
+    display: grid;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.preview__item-title {
+    color: #fff;
+    grid-row: 1/span 4;
+    will-change: transform;
+    grid-area: title;
+    place-self: center;
+    margin: 0;
+    padding-top: 1vw;
+    font-family: kudryashev-d-excontrast-sans, sans-serif;
+    font-size: clamp(3rem, 24vw, 17rem);
+    font-weight: 300;
+    line-height: 1;
+    overflow: hidden;
+}
+
+.preview__item-title .oh__inner {
+    display: inline-block;
+}
