--- a/김희진2/assets/css/style.css
+++ b/김희진2/assets/css/style.css
@@ -91,7 +91,7 @@ body {
     top: -10%;
     width: 120%;
     height: 120%;
-    background-image: url(https://images.unsplash.com/photo-1682070410678-5a62ffa34842?q=80&w=3687&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-image: url(https://images.unsplash.com/photo-1702635429447-06e9ee0c617c?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover;
 }
 
@@ -100,12 +100,15 @@ body {
 
 
 #section2 {
-    padding: 10% 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #section2 .about1 {
-    margin-left: 50vw;
     font-family: 'iceJaram-Rg';
+    text-align: center;
 
 }
 
@@ -126,4 +129,96 @@ body {
     font-family: 'iceJaram-Rg';
     font-size: 20px;
     font-weight: bold;
+}
+
+
+#section3 {
+    height: 100vh;
+}
+
+#section3 h4 {
+    padding: 16px 23px 0;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'iceJaram-Rg';
+}
+
+.port-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px 20px;
+    width: 400%;
+}
+
+.port-wrap .port {
+    width: calc(50vw - 60px);
+    margin-right: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.port-wrap .port::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.534) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.port-wrap .port .info {
+    position: absolute;
+    left: 20px;
+    top: 10px;
+    z-index: 10;
+}
+
+.port-wrap .port .info h5 {
+    color: #fff;
+    width: 100%;
+    padding: 0;
+    font-family: 'iceJaram-Rg';
+    font-size: 50px;
+
+}
+
+.port-wrap .port .info p {
+    color: #fff;
+    font-family: 'IropkeBatang';
+    width: 100%;
+}
+
+.port-wrap .port .mp3 {
+    position: absolute;
+    z-index: 100;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%, -50%);
+    width: 36%;
+}
+
+.port-wrap .port img {
+    filter: sepia(20%);
+}
+
+.port-wrap .port .skill {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+}
+
+.port-wrap .port .skill span {
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    display: block;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    margin-top: 10px;
+    font-family: 'PPSupplyMono';
 }
