--- a/리액트/문진호/portfolio/src/assets/css/_home.scss
+++ b/리액트/문진호/portfolio/src/assets/css/_home.scss
@@ -178,11 +178,15 @@
     position: relative;
 }
 
+.item .item__inner {
+    opacity: 0;
+}
+
 .item .item__bg {
     position: absolute;
     left: 0;
     bottom: 0;
     background: #000;
     width: 100%;
-    height: 0%;
+    height: 100%;
 }
